# relgo

./: .gitignore  .gitmodules  README.md  graph definition.pptx  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
.github/workflows/: main.yml
github/workflows/: latex.yml
paper/: main.tex  sample.bib  sec-conclusion.tex  sec-exp.tex  sec-framwork.tex  sec-intro.tex  sec-optimization.tex  sec-preliminaries.tex  sec-proof.tex  sec-relatedwork.tex  sec1.tex  sec1_back1.tex  sec2.tex  sec3.tex  sec3_back1.tex  sec4.tex
relgo-duckdb/: .gitignore  .gitmodules  CMakeLists.txt  README.md  extension_config.cmake  sample.sql
relgo-duckdb/patch/: 0001-graph_shell.patch  0001-graph_shell_linux.patch
relgo-duckdb/relgo/: .gitignore  .gitmodules  README.md  main.cpp  output.md
relgo-duckdb/relgo/create_index/: bound_create_rai_info.hpp  create_rai_info.hpp  graph_index_builder.cpp  graph_index_builder.hpp  logical_create_rai.hpp  physical_create_rai.cpp  physical_create_rai.hpp  physical_plan_generator_rai.cpp  physical_plan_generator_rai.hpp  rai_binder.cpp  rai_binder.hpp
relgo-duckdb/relgo/example/: CMakeLists.txt  main.cpp
relgo-duckdb/relgo/graph/: graph_schema.cpp  graph_schema.hpp
relgo-duckdb/relgo/graph_index/: alist.hpp  graph_index.hpp  physical_graph_index.cpp  physical_graph_index.hpp
relgo-duckdb/relgo/graph_operators/includes/: indexed_append_state.hpp  indexed_join_condition.hpp  indexed_row_group.hpp  indexed_row_group_collection.hpp  indexed_row_group_segment_tree.hpp  indexed_scan_state.hpp  indexed_table_function.hpp  indexed_table_scan.hpp  logical_indexed_get.hpp  physical_adj_join.hpp  physical_extend_intersect.hpp  physical_graph_index_join.hpp  physical_indexed_table_scan.hpp  physical_neighbor_join.hpp  sip_hashtable.hpp
relgo-duckdb/relgo/graph_operators/src/: indexed_row_group.cpp  indexed_row_group_collection.cpp  indexed_scan_state.cpp  indexed_table_function.cpp  indexed_table_scan.cpp  logical_indexed_get.cpp  physical_adj_join.cpp  physical_extend_intersect.cpp  physical_graph_index_join.cpp  physical_indexed_table_scan.cpp  physical_neighbor_join.cpp  sip_hashtable.cpp
relgo-duckdb/relgo/index/: graph_index_manager.cpp  graph_index_manager.hpp
relgo-duckdb/relgo/interface/: op_transform.hpp  plan_ir.hpp
relgo-duckdb/relgo/operators/: condition_tree.cpp  condition_tree.hpp  physical_adj_join.hpp  physical_aggregate.cpp  physical_aggregate.hpp  physical_extend_intersect.hpp  physical_hash_join.hpp  physical_join.cpp  physical_join.hpp  physical_neighbor_join.hpp  physical_operator.hpp  physical_project.cpp  physical_project.hpp  physical_scan.cpp  physical_scan.hpp  physical_select.cpp  physical_select.hpp
relgo-duckdb/relgo/optimizer/: gopt_offline_optimizer.cpp  gopt_offline_optimizer.hpp  graph_offline_optimizer.hpp  graph_optimizer.hpp
relgo-duckdb/relgo/parser/: aggergate_parser.cpp  aggregate_parser.hpp  algebra_parser.cpp  algebra_parser.hpp  basic_type_parser.cpp  basic_type_parser.hpp  common_parser.cpp  common_parser.hpp  core_parser.cpp  core_parser.hpp  edge_expand_parser.cpp  edge_expand_parser.hpp  expr_parser.cpp  expr_parser.hpp  getv_parser.cpp  getv_parser.hpp  intersect_parser.cpp  intersect_parser.hpp  meta_data_info.hpp  parse_info.cpp  parse_info.hpp  project_parser.cpp  project_parser.hpp  scan_parser.cpp  scan_parser.hpp  select_parser.cpp  select_parser.hpp  type_parser.cpp  type_parser.hpp
relgo-duckdb/relgo/patch/: relgo_changes.patch
relgo-duckdb/relgo/pgq2cypher/: convert.cpp  convert.hpp  cypher_analyzer.cpp  cypher_analyzer.hpp
relgo-duckdb/relgo/planner/: graph_planner.cpp  graph_planner.hpp
relgo-duckdb/relgo/proto/: physical.proto
relgo-duckdb/relgo/relgo_statement/: relgo_client_context.cpp  relgo_client_context.hpp  relgo_prepared_statement.cpp  relgo_prepared_statement.hpp  relgo_statement.cpp  relgo_statement.hpp
relgo-duckdb/relgo/utils/: comparision_operators.cpp  comparision_operators.hpp  files.hpp  functions.hpp  types.hpp  value.cpp  value.hpp  value_operations.cpp  value_operations.hpp
relgo-duckdb/resource/: load_ldbc01_merge.sql  schema_ldbc_merge.sql
relgo-duckdb/resource/queries/ldbc_merge/: interactive-complex-3-1.sql
relgo-duckdb/resource/queries/lsqb/cypher/: q1.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
relgo-duckdb/resource/queries/lsqb/sql/: q1.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql
relgo-duckdb/resource/queries/lsqb/sql_full/: q2.sql  q3.sql  q4.sql  q5.sql  q9.sql
relgo-duckdb/resource/queries/lsqb/sqlpgq/: q1.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
relgo-duckdb/resource/tmp/: graph.yaml  modern_statistics.json
relgo-duckdb/sqls/: create.sql  index.sql  init.sql  init_ldbc1.sql  init_ldbc10.sql  init_test.sql  load.sql  load_ldbc1.sql  load_ldbc10.sql  lsqb_query.sql  query.sql
relgo-duckdb/sqls/lsqb/q1/: init.sql
relgo-duckdb/src/: relgo_extension.cpp
relgo-duckdb/src/include/: cypher_extension.hpp  relgo_extension.hpp
